--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "prompt-eats",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "npx tsc --outDir dist",
-    "start": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.4.0",
-    "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "@fluvio/client": "^0.14.9",
-    "axios": "^1.7.4",
-    "express": "^4.19.2"
-  }
+	"name": "prompt-eats",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "npx tsc --outDir dist",
+		"start": "nodemon dist/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^22.4.0",
+		"@types/ws": "^8.5.12",
+		"nodemon": "^3.1.4",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {
+		"@fluvio/client": "^0.14.9",
+		"axios": "^1.7.4",
+		"express": "^4.19.2",
+		"ws": "^8.18.0"
+	}
 }
