--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
