--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/node": "^22.4.0",
 		"@types/ws": "^8.5.12",
@@ -22,6 +23,7 @@
 	"dependencies": {
 		"@fluvio/client": "^0.14.9",
 		"axios": "^1.7.4",
+		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"ws": "^8.18.0"
 	}
