--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 		"@fluvio/client": "^0.14.9",
 		"axios": "^1.7.4",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"ws": "^8.18.0"
 	}
